--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "node-sass": "^3.8.0",
     "node-uuid": "^1.4.7",
     "react-addons-test-utils": "^0.14.7",
+    "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "sass-loader": "^3.2.1",
     "script-loader": "^0.6.1",
